[package]
name = "slow-loris"
version = "0.1.0"
authors = ["Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"
description = "slow-loris"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "2.33.0"
dns-lookup = "1.0.2"
indicatif = "0.14.0"
console = "0.11.2"
regex = "1.3.7"
ctrlc = "3.1.4"
chrono = "0.4.11"

##[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
