[package]
name = "gnostr-relay-stresser"
version = "0.1.0"
authors = ["gnostr <admin@gnostr.org>", "Dzenan Jupic <info@dzenanjupic.de>"]
edition = "2018"
description = "gnostr-relay-stresser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
##[dev-dependencies]
assert_cmd = "2.0"
chrono = "0.4.11"
clap = "2.33.0"
console = "0.11.2"
ctrlc = "3.1.4"
dns-lookup = "2.0.4"
indicatif = "0.14.0"
predicates = "3.0"
rand = "0.7.3"
regex = "1.3.7"
tracing = "0.1"
tracing-subscriber = "0.3"
